--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollectionsTests.cs" />
     <Compile Include="StringsTests.cs" />
   </ItemGroup>
   <ItemGroup>
