--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollectionsTests.cs" />
+    <Compile Include="DateTimeTests.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="StringsTests.cs" />
   </ItemGroup>
