--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 _build/
 _site/
-Properties/
+#Properties/
 
 # Use git add -f to force override .sln when required. Not needed in most cases.
 # git add -f myProj.sln
