--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +60,7 @@
     <Compile Include="StringsTests.cs" />
     <Compile Include="XElementTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlDocumentsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
