--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -55,10 +55,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryExtensionsTests.cs" />
     <Compile Include="CollectionsTests.cs" />
     <Compile Include="DateTimeTests.cs" />
     <Compile Include="StringsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestHelper.cs" />
     <Compile Include="XmlDocumentsTests.cs" />
   </ItemGroup>
   <ItemGroup>
